--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,8 +2,9 @@
 @import 'partials/_header';
 @import 'partials/_main';
 @import 'partials/_comic';
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed:wght@700&display=swap');
-/* @import 'partials/_footer'; */
+@import 'partials/_footer'; 
 
 *{
     margin: 0;
