--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -43,8 +43,7 @@ h3{
 
 .ms_jumbo{
     height: 400px;
-    background-color: red;
-    /* background-image: url("../../../public/images/jumbotron.jpg");  */
+    background-image: url("../images/jumbotron.jpg"); 
 }
 
 .ms_search{
