--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -64,8 +64,8 @@
     }
 }
 .imgbox{
-    height: 55px;
-    img{
-        height: 60px;
-    }
+    height: 45px;
+    /* img{
+        height: 50px;
+    } */
 }
