--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,9 +7,7 @@ a {
   text-decoration: none;
   font-weight: 400;
 }
-
-a.active,
-a:hover {
+a.active, a:hover {
   color: #0282f9;
 }
 
@@ -26,13 +24,11 @@ a:hover {
   justify-content: space-around;
   align-items: center;
 }
-
 .ms_menuheader ul {
   list-style-type: none;
   padding: 0;
   font-family: "Roboto Condensed", sans-serif;
 }
-
 .ms_menuheader ul li {
   display: inline-block;
   margin: 0 10px;
@@ -45,8 +41,7 @@ a:hover {
 
 .ms_jumbo {
   height: 400px;
-  background-color: red;
-  /* background-image: url("../../../public/images/jumbotron.jpg");  */
+  background-image: url("../images/jumbotron.jpg");
 }
 
 .ms_search {
@@ -113,7 +108,6 @@ a:hover {
   align-items: center;
   padding: 30px 30px;
 }
-
 .ms_icontext p {
   padding: 0 10px;
   color: white;
@@ -121,11 +115,10 @@ a:hover {
 }
 
 .imgbox {
-  height: 55px;
-}
-
-.imgbox img {
-  height: 60px;
+  height: 45px;
+  /* img{
+      height: 50px;
+  } */
 }
 
 .ms_boxfumetti {
@@ -136,14 +129,13 @@ a:hover {
   background-size: contain;
   font-family: "Roboto", sans-serif;
 }
-
 .ms_boxfumetti img {
   width: 100%;
   height: 100%;
 }
 
 .ms_footer {
-  /* background-image: url("../assets/img/footer-bg.jpg"); */
+  background-image: url("../images/footer-bg.jpg");
   background-size: cover;
   background-color: #443f3f;
   font-family: "Roboto Condensed", sans-serif;
@@ -155,7 +147,6 @@ a:hover {
   display: flex;
   justify-content: space-between;
 }
-
 .container .logoimg {
   height: 500px;
   margin: -30px;
@@ -170,39 +161,31 @@ a:hover {
   text-align: start;
   padding: 0;
 }
-
 .msli img {
   height: 450px;
 }
-
 .msli .firstLI {
   padding-right: 60px;
 }
-
 .msli .secondLI {
   padding-right: 60px;
 }
-
 .msli .thirdLI {
   padding-right: 60px;
 }
-
 .msli h3 {
   padding: 15px 0px;
 }
-
 .msli ul {
   display: flex;
   flex-direction: column;
 }
-
 .msli ul li {
   list-style-type: none;
   font-size: 13px;
   color: gray;
   padding: 5px 0px;
 }
-
 .msli ul li a {
   text-decoration: none;
   color: gray;
@@ -215,14 +198,12 @@ a:hover {
   padding: 25px 15px;
   position: relative;
 }
-
 .ms_secondfooter .ms_buttonfooter {
   background-color: #303030;
   border: 2px solid #0282f9;
   color: white;
   padding: 15px;
 }
-
 .ms_secondfooter .ms_containersecondfooter {
   margin: 0 auto;
   width: 1300px;
@@ -238,7 +219,6 @@ a:hover {
   color: #0282f9;
   font-weight: 900;
 }
-
 .ms_social img {
   padding: 0 13px;
 }
@@ -248,4 +228,3 @@ a:hover {
   padding: 0;
   box-sizing: border-box;
 }
-
