--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -1,5 +1,5 @@
 .ms_footer{
-    /* background-image: url("../assets/img/footer-bg.jpg"); */
+    background-image: url("../images/footer-bg.jpg"); 
     background-size: cover;
     background-color: rgb(68, 63, 63);
     font-family: 'Roboto Condensed', sans-serif;
